Windows release builds now work (you can double-click on the exe and have a console window not pop up), and have an icon!  Also, support the new version of libgorilla

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ fancyengine2-test-*
 *.obj
 *.lst
 
+# vim turds
 .*.swp
 .*.swo
 .*.swn
@@ -18,3 +19,6 @@ fancyengine2-test-*
 
 src/.commit_hash.txt
 lib
+icon.res
+
+fancy_log_*.txt
