--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-.dub
-docs.json
-dub.selections.json
-__dummy.html
-docs/
 /fancyengine2
 fancyengine2-test-*
 *.exe
 *.o
 *.obj
 *.lst
+build
 
 # vim turds
 .*.swp
