--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/derelictutil"]
 	path = deps/derelictutil
 	url = https://github.com/derelictorg/derelictutil
+[submodule "deps/stb"]
+	path = deps/stb
+	url = https://github.com/nothings/stb
