Keep some exterraneous files from being built, add stub for d3d11

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,15 @@ elif host_machine.system() == 'linux'
 endif
 
 d_versions = []
+fancy_source = []
+
+if get_option('graphics_backend') == 'opengl'
+  d_versions += '_Gfx_is_opengl'
+  fancy_source += ['src/graphics/tex_gl.d', 'src/graphics/shading_gl.d']
+elif get_option('graphics_backend') == 'd3d11'
+  d_versions += '_Gfx_is_d3d11'
+  fancy_source += ['src/graphics/tex_d3d11.d', 'src/graphics/shading_d3d11.d']
+endif
 
 if get_option('buildtype') == 'debugoptimized'
   d_versions += '_Build_type_is_dev'
@@ -19,7 +28,7 @@ endif
 
 
 subdir('deps')
-fancy_source = ['src/app.d', 'src/asset.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/ecl.d', 'src/scripting/ecl_lib_interface.d', 'src/scripting/package.d', 'src/windowing/key.d', 'src/windowing/windows.d']
+fancy_source += ['src/app.d', 'src/asset.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/ecl.d', 'src/scripting/ecl_lib_interface.d', 'src/scripting/package.d', 'src/windowing/key.d', 'src/windowing/windows.d']
 include_dirs = include_directories('src', 'deps/derelictgl3/source', 'deps/derelictsdl2/source', 'deps/derelictutil/source', 'deps/gfm/math', 'deps/derelictassimp3/source')
 link_args = ['../lib/' + sys + '/gorilla.lib']
 
