Add basic d3d11 support.  (Can clear screen and that's about it for now)

--- a/meson.build
+++ b/meson.build
@@ -20,7 +20,9 @@ if get_option('graphics_backend') == 'opengl'
   fancy_source += gl_source
 elif get_option('graphics_backend') == 'd3d11'
   d_versions += '_Gfx_is_d3d11'
-  fancy_source += ['src/graphics/tex_d3d11.d', 'src/graphics/shading_d3d11.d']
+  #fancy_source += ['src/graphics/tex_d3d11.d', 'src/graphics/shading_d3d11.d', 'src/windowing/windows_d3d11.d']
+  fancy_source += ['src/windowing/windows_d3d11.d']
+  fancy_source += dx_source
 endif
 
 if get_option('buildtype') == 'debugoptimized'
@@ -31,7 +33,7 @@ endif
 
 
 fancy_source += ['src/app.d', 'src/asset.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/ecl.d', 'src/scripting/ecl_lib_interface.d', 'src/scripting/package.d', 'src/windowing/key.d', 'src/windowing/windows.d']
-include_dirs = include_directories('src', 'deps/derelictgl3/source', 'deps/derelictsdl2/source', 'deps/derelictutil/source', 'deps/gfm/math', 'deps/derelictassimp3/source')
+include_dirs = include_directories('src', 'deps/derelictgl3/source', 'deps/derelictsdl2/source', 'deps/derelictutil/source', 'deps/gfm/math', 'deps/derelictassimp3/source', 'deps/directx/src')
 link_args = ['../lib/' + sys + '/gorilla.lib']
 
 
@@ -46,6 +48,9 @@ if sys == 'win'
     link_args += '-L=' + lib + '.lib'
   endforeach
   link_args += ['-L=/nodefaultlib:msvcrtd.lib', '-L=/nodefaultlib:msvcrt.lib', '-L=/nodefaultlib:vcruntime.lib']
+  if get_option('graphics_backend') == 'd3d11'
+    link_args += '-L=d3d11.lib'
+  endif
 else
   link_args += '-L-Llib/' + sys + '/'
 endif
