Remove direct3d support.  There would be vulkan support if I had written it.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,1 @@
-option('graphics_backend', type: 'combo', choices: ['opengl', 'd3d11'])
+option('graphics_backend', type: 'combo', choices: ['opengl', 'vulkan'])
