--- a/meson.build
+++ b/meson.build
@@ -19,10 +19,10 @@ if get_option('graphics_backend') == 'opengl'
   d_versions += '_Gfx_is_opengl'
   fancy_source += ['src/graphics/model_gl.d', 'src/graphics/shading_gl.d', 'src/graphics/tex_gl.d', 'src/windowing/windows_gl.d']
   fancy_source += gl_source
-elif get_option('graphics_backend') == 'd3d11'
-  d_versions += '_Gfx_is_d3d11'
-  fancy_source += ['src/graphics/tex_d3d11.d', 'src/graphics/shading_d3d11.d', 'src/windowing/windows_d3d11.d']
-  fancy_source += ['src/windowing/windows_d3d11.d']
+elif get_option('graphics_backend') == 'vulkan'
+  d_versions += '_Gfx_is_vulkan'
+  fancy_source += ['src/graphics/tex_vk.d', 'src/graphics/shading_vk.d', 'src/windowing/windows_vk.d']
+  fancy_source += ['src/windowing/windows_vk.d']
   fancy_source += dx_source
 endif
 
@@ -34,7 +34,7 @@ endif
 
 
 fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/ecl.d', 'src/scripting/ecl_lib_interface.d', 'src/scripting/package.d', 'src/windowing/key.d', 'src/windowing/windows.d']
-include_dirs = include_directories('src', 'deps/derelictgl3/source', 'deps/derelictsdl2/source', 'deps/derelictutil/source', 'deps/gfm/math', 'deps/derelictassimp3/source', 'deps/directx/src', 'deps/toml/src')
+include_dirs = include_directories('src', 'deps/derelictgl3/source', 'deps/derelictsdl2/source', 'deps/derelictutil/source', 'deps/gfm/math', 'deps/derelictassimp3/source', 'deps/toml/src')
 link_args = ['../lib/' + sys + '/gorilla.lib']
 
 
@@ -49,9 +49,6 @@ if sys == 'win'
     link_args += '-L=' + lib + '.lib'
   endforeach
   link_args += ['-L=/nodefaultlib:msvcrtd.lib', '-L=/nodefaultlib:msvcrt.lib', '-L=/nodefaultlib:vcruntime.lib', '-mscrtlib=libcmt']
-  if get_option('graphics_backend') == 'd3d11'
-    link_args += ['-L=d3d11.lib', '-L=D3DCompiler.lib']
-  endif
   run_command('cmd', '/c', 'git rev-parse --short HEAD > src/.commit_hash.txt')
 else
   link_args += '-L-Llib/' + sys + '/'
