Stub version of vulkan.  It runs at about 300k fps currently ;o Also, change the upstream version of DerelictSDL2 to a branch that supports SDL version 2.0.6, because that's the first one that supports vulkan

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "deps/toml"]
 	path = deps/toml
 	url = https://github.com/Kripth/toml
+[submodule "deps/erupted"]
+	path = deps/erupted
+	url = https://github.com/ParticlePeter/ErupteD
