transition completely away from derelict to bindbc

--- a/meson.build
+++ b/meson.build
@@ -18,10 +18,16 @@ subdir('deps')
 
 if get_option('graphics_backend') == 'opengl'
   d_versions += '_Gfx_is_opengl'
+
+  d_versions += 'SDL_201' # for bindbc-sdl
+  d_versions += 'GL_33'   # for bindbc-opengl
+  d_versions += 'GL_ARB'  # bindbc-gl: load all supported ARB/KHR extensions
+
   fancy_source += ['src/graphics/fancy_model_gl.d', 'src/graphics/model_gl.d', 'src/graphics/shading_gl.d', 'src/graphics/tex_gl.d', 'src/windowing/windows_gl.d']
   fancy_source += gl_source
 elif get_option('graphics_backend') == 'vulkan'
   d_versions += '_Gfx_is_vulkan'
+  d_versions += 'SDL_208'
   fancy_source += ['src/graphics/fancy_model_vk.d', 'src/graphics/model_vk.d', 'src/graphics/shading_vk.d', 'src/graphics/tex_vk.d', 'src/windowing/windows_vk.d']
   fancy_source += ['src/windowing/windows_vk.d']
   fancy_source += vk_source
@@ -35,7 +41,7 @@ endif
 
 
 fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmem.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/fancy_model.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/package.d', 'src/scripting/s7.d', 'src/scripting/s7_lib_interface.d', 'src/windowing/key.d', 'src/windowing/windows.d']
-include_dirs = include_directories('src', 'deps/derelictgl3/source', 'deps/erupted/source', 'deps/derelictsdl2/source', 'deps/derelictutil/source', 'deps/gfm/math', 'deps/bindbc-assimp/source', 'deps/bindbc-loader/source', 'deps/toml/src')
+include_dirs = include_directories('src', 'deps/bindbc-opengl/source', 'deps/bindbc-sdl/source', 'deps/erupted/source', 'deps/gfm/math', 'deps/bindbc-assimp/source', 'deps/bindbc-loader/source', 'deps/toml/src')
 link_args = ['../lib/' + sys + '/gorilla.lib']
 
 
