--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,3 @@
-[submodule "deps/derelictgl3"]
-	path = deps/derelictgl3
-	url = https://github.com/derelictorg/derelictgl3
-[submodule "deps/derelictsdl2"]
-	path = deps/derelictsdl2
-	url = https://github.com/derelictorg/derelictsdl2
-	branch = 3.1
-[submodule "deps/derelictutil"]
-	path = deps/derelictutil
-	url = https://github.com/derelictorg/derelictutil
 [submodule "deps/stb"]
 	path = deps/stb
 	url = https://github.com/nothings/stb
@@ -26,3 +16,9 @@
 [submodule "deps/bindbc-loader"]
 	path = deps/bindbc-loader
 	url = https://github.com/BindBC/bindbc-loader
+[submodule "deps/bindbc-sdl"]
+	path = deps/bindbc-sdl
+	url = https://github.com/BindBC/bindbc-sdl
+[submodule "deps/bindbc-opengl"]
+	path = deps/bindbc-opengl
+	url = https://github.com/BindBC/bindbc-opengl
