~ish working font rendering.  Some glyphs don't render correctly, and there's a hack in the shader that needs to be fixed on the font loading end, and non-monospace fonts still don't work at all, but it's still a tonne of progress.  And I need to stop working on this to do homework.

--- a/meson.build
+++ b/meson.build
@@ -26,12 +26,12 @@ if get_option('graphics_backend') == 'opengl'
   d_versions += 'GL_33'   # for bindbc-opengl
   d_versions += 'GL_ARB'  # bindbc-gl: load all supported ARB/KHR extensions
 
-  fancy_source += ['src/graphics/fancy_model_gl.d', 'src/graphics/framebuffer_gl.d', 'src/graphics/model_gl.d', 'src/graphics/shading_gl.d', 'src/graphics/tex_gl.d', 'src/windowing/windows_gl.d']
+  fancy_source += ['src/graphics/fancy_model_gl.d', 'src/graphics/font_gl.d', 'src/graphics/framebuffer_gl.d', 'src/graphics/model_gl.d', 'src/graphics/shading_gl.d', 'src/graphics/tex_gl.d', 'src/windowing/windows_gl.d']
   fancy_source += gl_source
 elif get_option('graphics_backend') == 'vulkan'
   d_versions += '_Gfx_is_vulkan'
   d_versions += 'SDL_206'
-  fancy_source += ['src/graphics/fancy_model_vk.d', 'src/graphics/framebuffer_vk.d', 'src/graphics/model_vk.d', 'src/graphics/shading_vk.d', 'src/graphics/tex_vk.d', 'src/windowing/windows_vk.d']
+  fancy_source += ['src/graphics/fancy_model_vk.d', 'src/graphics/font_vk.d', 'src/graphics/framebuffer_vk.d', 'src/graphics/model_vk.d', 'src/graphics/shading_vk.d', 'src/graphics/tex_vk.d', 'src/windowing/windows_vk.d']
   fancy_source += ['src/windowing/windows_vk.d']
   fancy_source += vk_source
 endif
@@ -43,10 +43,17 @@ elif get_option('buildtype') == 'release'
 endif
 
 
-fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmem.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/fancy_model.d', 'src/graphics/framebuffer.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/package.d', 'src/scripting/moonjit.d', 'src/scripting/s7.d', 'src/scripting/s7_lib_interface.d', 'src/windowing/key.d', 'src/windowing/windows.d']
+fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmem.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/fancy_model.d', 'src/graphics/font.d', 'src/graphics/framebuffer.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/package.d', 'src/scripting/moonjit.d', 'src/scripting/s7.d', 'src/scripting/s7_lib_interface.d', 'src/windowing/key.d', 'src/windowing/windows.d']
 include_dirs = include_directories('src', 'deps/bindbc-opengl/source', 'deps/bindbc-sdl/source', 'deps/erupted/source', 'deps/gfm/math', 'deps/bindbc-assimp/source', 'deps/bindbc-loader/source', 'deps/toml/src', 'deps/intel-intrinsics/source', 'deps/bindbc-lua/source/')
-link_args = ['../lib/' + sys + '/gorilla.lib', '../lib/' + sys + '/libluajit-5.1.a']
 
+link_args = []
+foreach lib: ['gorilla.lib', 'libluajit-5.1.a'] #, 'libpathfinder_c.a', 'libpathfinder_canvas.a', 'libpathfinder_gl.a', 'libfont_kit_c.a']
+  link_args += ['../lib/' + sys + '/' + lib]
+endforeach
+
+#dependencies += dependency('harfbuzz')
+#dependencies += dependency('freetype2')
+#dependencies += dependency('fontconfig')
 
 #run_command('git.exe rev-parse --short HEAD > src/.commit.txt')
 if sys == 'win'
