Font rendering is fancy and fun.  Only thing missing from this iteration is kerning.  After that, maybe time to think about sdf.

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "deps/bindbc-lua"]
 	path = deps/bindbc-lua
 	url = https://github.com/BindBC/bindbc-lua
+[submodule "deps/bindbc-freetype"]
+	path = deps/bindbc-freetype
+	url = https://github.com/BindBC/bindbc-freetype
