--- a/meson.build
+++ b/meson.build
@@ -44,7 +44,7 @@ endif
 
 
 fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/stdlib.d', 'src/stdmem.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/fancy_model.d', 'src/graphics/font.d', 'src/graphics/framebuffer.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/package.d', 'src/scripting/moonjit.d', 'src/scripting/s7.d', 'src/scripting/s7_lib_interface.d', 'src/windowing/key.d', 'src/windowing/windows.d']
-include_dirs = include_directories('src', 'deps/bindbc-opengl/source', 'deps/bindbc-sdl/source', 'deps/erupted/source', 'deps/gfm/math', 'deps/bindbc-assimp/source', 'deps/bindbc-loader/source', 'deps/toml/src', 'deps/intel-intrinsics/source', 'deps/bindbc-lua/source/')
+include_dirs = include_directories('src', 'deps/bindbc-opengl/source', 'deps/bindbc-sdl/source', 'deps/erupted/source', 'deps/gfm/math', 'deps/bindbc-assimp/source', 'deps/bindbc-loader/source', 'deps/toml/src', 'deps/intel-intrinsics/source', 'deps/bindbc-lua/source/', 'deps/bindbc-freetype/source')
 
 link_args = []
 foreach lib: ['gorilla.lib', 'libluajit-5.1.a'] #, 'libpathfinder_c.a', 'libpathfinder_canvas.a', 'libpathfinder_gl.a', 'libfont_kit_c.a']
@@ -52,7 +52,7 @@ foreach lib: ['gorilla.lib', 'libluajit-5.1.a'] #, 'libpathfinder_c.a', 'libpath
 endforeach
 
 #dependencies += dependency('harfbuzz')
-#dependencies += dependency('freetype2')
+dependencies += dependency('freetype2')
 #dependencies += dependency('fontconfig')
 
 #run_command('git.exe rev-parse --short HEAD > src/.commit.txt')
