switch from std.variant algebraic to paul backus sumtype

--- a/meson.build
+++ b/meson.build
@@ -43,7 +43,7 @@ elif get_option('buildtype') == 'release'
 endif
 
 
-fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/scriptable.d', 'src/stdlib.d', 'src/stdmem.d', 'src/stdmath.d', 'src/sound/gorilla.d', 'src/graphics/fancy_model.d', 'src/graphics/font.d', 'src/graphics/framebuffer.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/package.d', 'src/scripting/moonjit.d', 'src/scripting/s7.d', 'src/scripting/s7_lib_interface.d', 'src/windowing/key.d', 'src/windowing/windows.d', 'src/queue.d', 'src/repl.d']
+fancy_source += ['src/app.d', 'src/asset.d', 'src/config.d', 'src/cstdlib.d', 'src/logging.d', 'src/scriptable.d', 'src/stdlib.d', 'src/stdmem.d', 'src/stdmath.d', 'src/sumtype.d', 'src/sound/gorilla.d', 'src/graphics/fancy_model.d', 'src/graphics/font.d', 'src/graphics/framebuffer.d', 'src/graphics/model.d', 'src/graphics/shading.d', 'src/graphics/tex.d', 'src/scripting/package.d', 'src/scripting/moonjit.d', 'src/scripting/s7.d', 'src/scripting/s7_lib_interface.d', 'src/windowing/key.d', 'src/windowing/windows.d', 'src/queue.d', 'src/repl.d']
 include_dirs = include_directories('src', 'deps/bindbc-opengl/source', 'deps/bindbc-sdl/source', 'deps/erupted/source', 'deps/gfm/math', 'deps/bindbc-assimp/source', 'deps/bindbc-loader/source', 'deps/toml/src', 'deps/intel-intrinsics/source', 'deps/bindbc-lua/source/', 'deps/bindbc-freetype/source')
 
 link_args = []
