--- a/.gitmodules
+++ b/.gitmodules
@@ -6,13 +6,13 @@
 	url = https://github.com/d-gamedev-team/gfm
 [submodule "deps/toml"]
 	path = deps/toml
-	url = https://github.com/Kripth/toml
+	url = https://github.com/rickrankin/toml
 [submodule "deps/erupted"]
 	path = deps/erupted
 	url = https://github.com/ParticlePeter/ErupteD
 [submodule "deps/bindbc-assimp"]
 	path = deps/bindbc-assimp
-	url = https://github.com/Sobaya007/bindbc-assimp
+	url = https://github.com/moon-chilled/bindbc-assimp
 [submodule "deps/bindbc-loader"]
 	path = deps/bindbc-loader
 	url = https://github.com/BindBC/bindbc-loader
